# apple-app-bundle-finder

./: .gitignore  EXAMPLE.md  LICENSE  README.md  README_BUILD.md  README_EN.md  build.py  main.py  pyproject.toml
api/: __init__.py  itunes_api.py
assets/: logo.icns
build_scripts/: __init__.py  base_builder.py  build_manager.py  config.py  linux_builder.py  macos_builder.py  utils.py  windows_builder.py
config/: countries.json
models/: app_info.py
ui/: __init__.py  details_panel_widget.py  font_config.py  info_panel_widget.py  main_window.py  search_widget.py
utils/: helpers.py
